# convo-with-computer

./: CMakeLists.txt
algo/: .cproject
algo/dynamic/: binomial_coefficients.cpp
algo/dynamic/approximate_string_matching/: asm_dp.cpp  asm_recursive.cpp
algo/dynamic/fibonacci/: fibonacci_dp.cpp  fibonacci_recursive.cpp  striver_recursion_onsubseq.cpp  striver_recursion_subseq_addtosum.cpp
c++/: .cproject
c++/atomics/simple-mrmw-q/: s_mrmw_q.cpp
c++/bits/: a.out  bits_1.cpp
c++/general/: varauto.cpp  varinit.cpp
c++/threads/: threadexample.cpp
ds/: .cproject
ds/bst/: bst.cpp  bst.h
ds/heap/: Heap.cpp  Heap.h
ds/list/: list.cpp  list.h  listnode.h
os/: .cproject
os/shm/: howtoshm.cpp  howtoshm.h
skunkworks/: .cproject  .project
skunkworks/NoDuplicates/: NoDupItemList.cpp  NoDupItemList.h
skunkworks/RegexEngine/: ConsolePrinter.h  ConsoleReader.h  InputSource.h  OperatorDefn.h  OutputDestination.h  RegexEngine.h  SimpleRegexEngine.h  main.cpp
skunkworks/ShortestPathAmongFriends/: ShortestPath.cpp  ShortestPath.h
skunkworks/tas/: .cproject  .project  README
skunkworks/tas/Debug/: makefile  sources.mk
skunkworks/tas/client/: Makefile  main.cpp  messagehandler.cpp  messagehandler.h  messaging.h  services.h  simpleclient.h
skunkworks/tas/server/: Makefile  command.h  commanddata.cpp  commanddata.h  filetestoperationcommand.cpp  filetestoperationcommand.h  getdatecommand.cpp  getdatecommand.h  helper.h  main.cpp  messagehandler.cpp  messagehandler.h  messaging.h  nextnprimecommand.cpp  nextnprimecommand.h  nextprimecommand.cpp  server  (+5 more)
(+74 files in other folders)
