cmake_minimum_required(VERSION 3.26)
project(convo_with_computer)

set(CMAKE_CXX_STANDARD 23)

add_executable(convo_with_computer
        c++/books/c++faqs/chapter1/createdeleteobject.cpp
        c++/books/c++faqs/chapter1/createdeleteobject.h
        c++/books/c++faqs/chapter1/createdeleteobject.h
        c++/books/c++faqs/chapter1/createdeleteobject.h)
